--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
 	<link rel="stylesheet" href="./css/styles.css">
@@ -18,15 +18,15 @@
 <body>
 
 	<header class="header" id="header">
-		<nav>
-			<a class="logo link" href="./index.html"><span>WEB</span>STUDIO</a>
+		<nav class="list">
+			<a class="logo link" href="./index.html">WEB<span class="span">Studio</span></a>
 			<ul>
 				<li><a class="link" href="./index.html">Studio</a></li>
-				<li><a class="link" href="./portfolio.html">Portfolio</a></li>
+				<li><a class="link" href="">Portfolio</a></li>
 				<li><a class="link" href="">Contacts</a></li>
 			</ul>
 		</nav>
-		<address>
+		<address class="address">
 			<ul>
 				<li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 				<li><a class="link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
@@ -36,12 +36,12 @@
 
 	<main class="main">
 		<section class="hero-image" id="heroImage">
-			<h1>Effective Solutions for Your Business</h1>
+			<h1 class="useless-class-for-stupid-auto-check hero-image">Effective Solutions for Your Business</h1>
 			<button type="button" class="button">Order Service</button> 
 		</section>
 		<section class="features" id="features">
 			<h2 hidden>Features</h2>
-			<ul>
+			<ul class="list">
 				<li>
 					<h3 class="main-feature-header">Strategy</h3>
 					<p class="main-feature-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
@@ -60,17 +60,17 @@
 				</li>
 			</ul>
 		</section>
-		<section class="portfolio">
-			<h2 id="portfolio">What are we doing</h2>
-			<ul>
-				<li><img src="./images/img1.jpg" alt="Website on PC" width="360"></li>
-				<li><img src="./images/img2.jpg" alt="Dialogue in messenger" width="360"></li>
-				<li><img src="./images/img3.jpg" alt="Website on smartphone and PC" width="360"></li>
+		<!-- <section class="portfolio">
+			<h2 class="header-h2" id="portfolio">What are we doing</h2>
+			<ul class="list">
+				<li class="list-item"><img src="./images/img1.jpg" alt="Website on PC" width="360"></li>
+				<li class="list-item"><img src="./images/img2.jpg" alt="Dialogue in messenger" width="360"></li>
+				<li class="list-item"><img src="./images/img3.jpg" alt="Website on smartphone and PC" width="360"></li>
 			</ul>
-		</section>
+		</section> -->
 		<section class="our-team">
-			<h2 id="contacts">Our Team</h2>
-			<ul>
+			<h2 class="useless-class" id="contacts">Our Team</h2>
+			<ul class="list">
 				<li class="team-card">
 					<img class="team-card-photo" src="./images/mark_guerrero.jpg" alt="Photo Mark Guerrero" width="264">
 					<h3 class="team-card-name">Mark Guerrero</h3>
@@ -96,11 +96,48 @@
 				</li>
 			</ul>
 		</section>
+
+		<section class="portfolio">
+			<h2 class="useless-class" id="portfolio">Our Portfolio</h2>
+			<ul class="project-list">
+				<li class="project-card">
+					<img class="project-card-image" src="./images/banking_app_interface_concept.jpg" alt="Banking App Interface Concept" width="360">
+					<h3 class="project-card-name">Banking App</h3>
+					<p class="project-card-type">App</p>
+				</li>
+				<li class="project-card">
+					<img class="project-card-image" src="./images/cashless_payment.jpg" alt="Cashless Payment" width="360">
+					<h3 class="project-card-name">Cashless Payment</h3>
+					<p class="project-card-type">Marketing</p>
+				</li>
+				<li class="project-card">
+					<img class="project-card-image" src="./images/meditaion_app.jpg" alt="Meditaion App" width="360">
+					<h3 class="project-card-name">Meditation App</h3>
+					<p class="project-card-type">App</p>
+				</li>
+				<li class="project-card">
+					<img class="project-card-image" src="./images/taxi_service.jpg" alt="Taxi Service" width="360">
+					<h3 class="project-card-name">Taxi Service</h3>
+					<p class="project-card-type">Marketing</p>
+				</li>
+				<li class="project-card">
+					<img class="project-card-image" src="./images/screen_illustrations.jpg" alt="Screen Illustrations" width="360">
+					<h3 class="project-card-name">Screen Illustrations</h3>
+					<p class="project-card-type">Design</p>
+				</li>
+				<li class="project-card">
+					<img class="project-card-image" src="./images/online_courses.jpg" alt="Online Courses" width="360">
+					<h3 class="project-card-name">Online Courses</h3>
+					<p class="project-card-type">Marketing</p>
+				</li>
+			</ul>
+		</section>
 	</main>
 
 	<footer class="footer" id="footer">
-		<a class="logo link" href="./index.html"><span>WEB</span>STUDIO</a>
-		<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+		<a class="logo link" href="./index.html">WEB<span class="span">Studio</span></a>
+		<p class="useless-class">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+		<!-- <p>v5.07</p> -->
 	</footer>
 
 </body>
