--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 	<footer class="footer" id="footer">
 		<a class="logo link" href="./index.html">WEB<span class="span">Studio</span></a>
 		<p class="useless-class">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-		<!-- <p>v5.07</p> -->
+		<p class="version">v5.07</p>
 	</footer>
 
 </body>
