--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css" integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="./css/styles.css">
 
 	<title>Main page</title>
@@ -17,29 +19,29 @@
 
 <body>
 
-	<header class="header" id="header">
+	<header class="header" id="header"><div class="container">
 		<nav class="list">
 			<a class="logo link" href="./index.html">WEB<span class="span">Studio</span></a>
-			<ul>
+			<ul class="list">
 				<li><a class="link" href="./index.html">Studio</a></li>
 				<li><a class="link" href="">Portfolio</a></li>
 				<li><a class="link" href="">Contacts</a></li>
 			</ul>
 		</nav>
 		<address class="address">
-			<ul>
+			<ul class="list">
 				<li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 				<li><a class="link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
 			</ul>
 		</address>
-	</header>
+	</div></header>
 
 	<main class="main">
-		<section class="hero-image" id="heroImage">
+		<section class="section hero-image" id="heroImage"><div class="container">
 			<h1 class="useless-class-for-stupid-auto-check hero-image">Effective Solutions for Your Business</h1>
 			<button type="button" class="button">Order Service</button> 
-		</section>
-		<section class="features" id="features">
+		</div></section>
+		<section class="section features" id="features"><div class="container">
 			<h2 hidden>Features</h2>
 			<ul class="list">
 				<li>
@@ -59,7 +61,7 @@
 					<p class="main-feature-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
 				</li>
 			</ul>
-		</section>
+		</div></section>
 		<!-- <section class="portfolio">
 			<h2 class="header-h2" id="portfolio">What are we doing</h2>
 			<ul class="list">
@@ -68,7 +70,7 @@
 				<li class="list-item"><img src="./images/img3.jpg" alt="Website on smartphone and PC" width="360"></li>
 			</ul>
 		</section> -->
-		<section class="our-team">
+		<section class="section our-team"><div class="container">
 			<h2 class="useless-class" id="contacts">Our Team</h2>
 			<ul class="list">
 				<li class="team-card">
@@ -95,9 +97,9 @@
 					<p class="team-card-role">UI Designer</p>
 				</li>
 			</ul>
-		</section>
+		</div></section>
 
-		<section class="portfolio">
+		<section class="section portfolio"><div class="container">
 			<h2 class="useless-class" id="portfolio">Our Portfolio</h2>
 			<ul class="project-list">
 				<li class="project-card">
@@ -131,14 +133,14 @@
 					<p class="project-card-type">Marketing</p>
 				</li>
 			</ul>
-		</section>
+		</div></section>
 	</main>
 
-	<footer class="footer" id="footer">
+	<footer class="footer" id="footer"><div class="container">
 		<a class="logo link" href="./index.html">WEB<span class="span">Studio</span></a>
 		<p class="useless-class">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 		<p class="version">v5.07</p>
-	</footer>
+	</div></footer>
 
 </body>
 </html>
